# sportsbetsinfo

./: .env.example  .gitignore  CLAUDE.md  FRONTEND_PLAN.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/sportsbetsinfo/: __init__.py  __main__.py
src/sportsbetsinfo/cli/: __init__.py  commands.py
src/sportsbetsinfo/clients/: __init__.py  base.py  kalshi.py  odds_api.py
src/sportsbetsinfo/config/: __init__.py  settings.py
src/sportsbetsinfo/core/: __init__.py  exceptions.py  hashing.py  models.py
src/sportsbetsinfo/db/: __init__.py  connection.py  schema.py
src/sportsbetsinfo/db/repositories/: __init__.py  analysis.py  base.py  evaluation.py  outcome.py  proposal.py  snapshot.py
src/sportsbetsinfo/services/: __init__.py  analyzer.py  collector.py  evaluator.py  outcomes.py
src/sportsbetsinfo/web/: __init__.py  app.py
src/sportsbetsinfo/web/routes/: api.py  pages.py
src/sportsbetsinfo/web/static/css/: style.css
src/sportsbetsinfo/web/static/js/: app.js
src/sportsbetsinfo/web/templates/: base.html  charts.html  dashboard.html  edges.html  game_detail.html  games.html  report.html
