[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sportsbetsinfo"
version = "0.1.0"
description = "Event-sourced sports betting research platform with immutable timeline tracking"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Johnny Silverhand", email = "171453009+404Dealer@users.noreply.github.com" }
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
sportsbetsinfo = "sportsbetsinfo.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sportsbetsinfo"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
